# gf-client-game-updater

./: .gitignore  Cargo.toml  README.md  config.toml  todo
.github/workflows/: publish.yml
src/: config.rs  main.rs  patch.rs  sha.rs
