[package]
name = "tera-client-updater"
version = "0.1.0"
authors = ["Mathi <mathi@mathi.moe>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
sha-1 = "0.9"

[profile.release]
codegen-units = 1
lto = true