[package]
name = "gf-client-game-updater"
version = "0.2.0"
authors = ["Mathi <mathi@mathi.moe>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
sha-1 = "0.10"
tokio = { version = "1.0", features = ["full"] }
toml = "0.7"

[profile.release]
codegen-units = 1
lto = true
